# clinical-ontology-normalizer

./: .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  ROADMAP.md  docker-compose.dev.yml  docker-compose.fhir.yml  docker-compose.yml  test_note.json
backend/: .dockerignore  Dockerfile  SYSTEM_INVENTORY.md  demo_cli.py  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/fixtures/: clinical_abbreviations.json  cpt_codes.json  drug_interactions_expanded.json  drug_safety_profiles_expanded.json  icd10_codes.json  omop_vocabulary.json
backend/scripts/: fetch_icd10_codes.py  run_worker.sh
backend/tests/: __init__.py  benchmark_comparison.py  benchmark_report.json  conftest.py  test_abbreviation_coverage.py  test_api_documents.py  test_api_export.py  test_api_health.py  test_api_jobs.py  test_api_patients.py  test_api_patients_facts.py  test_audit.py  test_auth.py  test_billing_optimizer.py  test_clinical_calculators.py  test_clinical_ner.py  test_coding_query_generator.py  test_confidence_scoring.py  test_cpt_suggester.py  test_dashboard.py  test_database.py  test_differential_diagnosis.py  test_drug_interactions.py  test_drug_safety.py  test_enhanced_extraction.py  test_ensemble_nlp.py  test_fact_builder.py  test_fact_builder_db.py  test_fact_builder_service.py  test_fixtures.py  test_graph_builder.py  test_graph_builder_db.py  test_graph_builder_service.py  test_hcc_analyzer.py  test_icd10_suggester.py  test_integration.py  test_jobs.py  test_lab_reference.py  test_mapping_accuracy.py  (+26 more)
specs/: nlp.md  (+5 more)
(+152 files in other folders)
